--- a/deploy/UI/about_us/index.html
+++ b/deploy/UI/about_us/index.html
@@ -25,18 +25,18 @@
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
                             aria-expanded="false">Demo</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="../demo/index.html">Main task</a></li>
-                            <li><a class="dropdown-item" href="../additional_demo/index.html">Additional task</a></li>
+                            <li><a class="dropdown-item" href="../demo">Main task</a></li>
+                            <li><a class="dropdown-item" href="../additional_demo">Additional task</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../example/index.html">Examples</a>
+                        <a class="nav-link" href="../example">Examples</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../model_overview/index.html">Details</a>
+                        <a class="nav-link" href="../model_overview">Details</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../comparison/index.html">Comparison</a>
+                        <a class="nav-link" href="../comparison">Comparison</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link active" aria-current="page" href="#">About Us</a>
@@ -120,7 +120,7 @@
                             different models and offers options to change the model according to your preferences.
                             Upload your photos and experience image enhancement now!
                         </p>
-                        <a href="../demo/index.html" class="btn btn-light px-5 rounded-pill shadow-sm">Try it now</a>
+                        <a href="../demo" class="btn btn-light px-5 rounded-pill shadow-sm">Try it now</a>
                     </div>
                     <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2">
                         <img src="https://bootstrapious.com/i/snippets/sn-about/img-1.jpg" alt=""
@@ -137,7 +137,7 @@
                             different models. Provides image slide functionality to easily compare low resolution images
                             with super resolution images generated from models.
                         </p>
-                        <a href="../example/index.html" class="btn btn-light px-5 rounded-pill shadow-sm">Access</a>
+                        <a href="../example" class="btn btn-light px-5 rounded-pill shadow-sm">Access</a>
                     </div>
                 </div>
                 <div class="row align-items-center mb-5">
@@ -145,7 +145,7 @@
                         <h2 class="font-weight-light">Details </h2>
                         <p class="font-italic text-muted mb-4">Describes detailed information regarding the models used
                             by us. Includes model architecture, training options, hyperparameters, metrics.</p>
-                        <a href="../model_overview/index.html"
+                        <a href="../model_overview"
                             class="btn btn-light px-5 rounded-pill shadow-sm">Access</a>
                     </div>
                     <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img
@@ -160,7 +160,7 @@
                         <h2 class="font-weight-light">Comparison</h2>
                         <p class="font-italic text-muted mb-4">Summarize results and visualize datasets, models,
                             training results, and enhanced images.</p>
-                        <a href="../comparison/index.html" class="btn btn-light px-5 rounded-pill shadow-sm">Access</a>
+                        <a href="../comparison" class="btn btn-light px-5 rounded-pill shadow-sm">Access</a>
                     </div>
                 </div>
             </div>
@@ -285,6 +285,7 @@
                         d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
                 </symbol>
             </svg>
+        </div>
     </main>
     <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
